# nerf_bridge_lidar

./: lab_scan_config.json  pyproject.toml  ros_train.py  what to run.txt
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/share/odometry_to_camera_pose/cmake/: odometry_to_camera_poseConfig.cmake
catkin_ws/src/odometry_to_camera_pose/: CMakeLists.txt
catkin_ws/src/odometry_to_camera_pose/scripts/: lidar.py  odom_to_camera_pose.py
nerfbridge/: method_configs.py  ros_dataloader.py  ros_datamanager.py  ros_dataparser.py  ros_dataset.py  ros_splatfacto.py
nsros/: method_configs.py  method_configs_new.py  ros_dataloader.py  ros_datamanager.py  ros_dataparser.py  ros_dataset.py  ros_splatfacto.py
